Travel graph v2: return-scroll and taxi edges baked in
Return scrolls and Victoria cabs are now world-graph edges instead of
ad-hoc scripting, so every traveler (follow, autopilot, errands) plans
with them:

- BotWorldGraph v2 scans info/returnMap; a map gets a scroll edge to its
  return town only when the portal walk there needs 3+ hops (or none
  exists). Hardcoded taxi table mirrors the cab NPC scripts (6 regular
  cabs at 800/1000 meso, 2 VIP cabs to the Ant Tunnel at 10k), all
  verified against scripts/npc and town WZ life data.
- RouteOptions(withReturnScroll, meso) gates both edge kinds per query;
  fares gate per edge and are re-checked at ride time.
- BotTravelManager executes the consumable hops: scroll fires on the
  spot; taxi walks to within 500px of the cab NPC, pays the fare, and
  warps to portal 0 like the script does.
- Autopilot advisor/party/farm candidate pools use the same options, and
  the ad-hoc scroll-on-long-errand hook is gone - the graph is the SSOT.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>